OPEN - task 1: 方向付けフェーズを実行すること。 https://github.com/nilcy/uuo/issues/issues/issue/1
Signed-off-by: nilcy <nilcy@mac.com>